Revert "fix(nav): adjust mobile menu position and alignment"
This reverts commit 57bbb36bd4ab6895685723568faa4f6d7ee66891.

--- a/src/mittatelier.css
+++ b/src/mittatelier.css
@@ -278,10 +278,8 @@ div.desc { /*beskrivelsen under bilder i galleriet*/
         top: 0;
         right: 10px;
         height: 60px;
-        width: 60px;
         display: flex;
         align-items: center;
-        justify-content: center;
         order: 2;
         background: transparent;
         border: none;
@@ -302,7 +300,7 @@ div.desc { /*beskrivelsen under bilder i galleriet*/
     #meny ul {
         display: none;
         position: absolute;
-        top: 59px;
+        top: 60px;
         right: 0;
         width: 50vw;
         background-color: white;
